2025-05-15
version: 1.0.28
+ support model setting precedent and succedent (take action before pre/post statement)

2025-05-14
version: 1.0.27
+ support model on field options setting in order to transform data set
+ support transformFilters to take action before transforming in order to reduce data set
    + defined new attribute datarecords into MigrateRecordSet
+ support dynamic verify function handler before fetch data from api/db 
    + check return info = {valid: boolean, value: any} if not info.valid then return info.value
    + always set params.verifier = info.value then it can use #params.verifier in setting
+ support current index of parent data row reference in sub model traversal

2025-05-13
version: 1.0.26
+ support sub model
+ add 2 new table schema: tmigratesubmodel & tmigratesubtask

ALTER TABLE `tmigratemodel`
	ADD COLUMN `submodels` TEXT NULL DEFAULT NULL AFTER `tablesettings`;

2025-05-08
version: 1.0.25
+ support scrape initialize data category in connection setting

2025-05-07
version: 1.0.24
+ fixed bug stat file does not exist

version: 1.0.23
+ fixed bug s3 download file

version: 1.0.22
+ support import all file from azure storage and aws s3 storage

2025-05-06
+ support import all files in folder (specified by path parameter or plugin name=folder)

2025-05-05
+ support migrate with upload multiple files

2025-05-03
version: 1.0.21
+ support inject request parameters into data set as parameter mapper setting
+ support parse more default value from submit parameters by setting defaultValue with #params.xxx where xxx come from request parameter
+ support initialize and finalize task configuration setting

2025-05-01
version: 1.0.20
+ plugin support dynamic parameter with place holder ${variable-name} in source setting

2025-04-30
version: 1.0.19
+ update library will-core & will-serv
+ dynamic version depending on package.json

2025-04-23
version: 1.0.18
+ fix bug emte001: cannot delete model when retrieve 
+ emte001: support share flag
