@@ -26,7 +26,7 @@
     "@willsofts/will-db": "^1.0.63",
     "@willsofts/will-lib": "^1.0.30",
     "@willsofts/will-run": "^1.0.14",
-    "@willsofts/will-serv": "^1.0.58",
+    "@willsofts/will-serv": "^1.0.59",
     "@willsofts/will-sql": "^1.0.36",
     "@willsofts/will-store": "^1.0.4",
     "@willsofts/will-util": "^1.0.26",
